...
        <scene sceneID="WRU-90-Byl">
            <objects>
                <viewController id="6Mv-yV-uVo" customClass="ResumeViewController" customModule="Resume" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="QdP-kp-Zdv">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
...
                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="x16-Qc-Iml">
                                                <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
                                                <accessibility key="accessibilityConfiguration" identifier="porfileImage">
                                                    <bool key="isElement" value="YES"/>
                                                </accessibility>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZEZ-by-Qc6">
                                                        <rect key="frame" x="0.0" y="0.0" width="169" height="20"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="nameLabel"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="20" id="l1n-oL-qqj"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="employment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eFc-1B-Gsm">
                                                        <rect key="frame" x="0.0" y="28" width="169" height="20"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="employmentLabel"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="20" id="emU-6c-8dD"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description can be multilinear" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="U
                                                        <rect key="frame" x="0.0" y="56" width="169" height="64"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="summaryLabel"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        <rect key="frame" x="0.0" y="128" width="304" height="37"/>
                                        <color key="backgroundColor" name="secondary-color"/>
                                        <accessibility key="accessibilityConfiguration" identifier="contactButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="37" id="ADD-8F-jM2"/>
...
                                                        <constraint firstAttribute="height" constant="37" id="hSh-1O-1ti"/>
                                                    </constraints>
                                                    <state key="normal" title="Return">
                                                        <color key="titleColor" name="background-color"/>
                                                    </state>
...
                    <connections>
                        <outlet property="cellPhone" destination="CfR-Zs-fAO" id="qda-5R-aik"/>
                        <outlet property="cellPhoneLabel" destination="Ebg-ez-i4t" id="nev-v7-Gto"/>
                        <outlet property="email" destination="CLg-vO-69X" id="uMP-zl-Hmn"/>
                        <outlet property="emailLabel" destination="UDO-u1-z0G" id="iUF-8z-17o"/>
                        <outlet property="phone" destination="Ku9-hb-EZc" id="Sd7-9K-XeL"/>
                        <outlet property="phoneLabel" destination="FEb-Gq-6T1" id="PfR-nq-qcg"/>
                    </connections>
                </viewController>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Skills" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rd5-wD-MEf">
                                <rect key="frame" x="0.0" y="36" width="320" height="36"/>
                                <accessibility key="accessibilityConfiguration" identifier="skillTitle"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                <color key="textColor" name="dark-color"/>
...
                                </view>
                            </tableView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="References" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3ht-bf-7iS">
                                <rect key="frame" x="0.0" y="36" width="320" height="36"/>
                                <accessibility key="accessibilityConfiguration" identifier="referencesTitle"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                <color key="textColor" name="dark-color"/>
...
