...
                <subviews>
                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="sAl-Gg-3nR">
                        <rect key="frame" x="16" y="11" width="288" height="159"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ImR-sO-47N">
                                <rect key="frame" x="0.0" y="0.0" width="288" height="29"/>
                                <accessibility key="accessibilityConfiguration" identifier="referenceNameLabel"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="29" id="miJ-1I-gdt"/>
                                </constraints>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Workplace" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eK6-A9-Y4D">
                                <rect key="frame" x="0.0" y="45" width="288" height="20.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="referenceWorkplaceLabel"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="IFi-zm-EeB">
                                <rect key="frame" x="0.0" y="81.5" width="288" height="77.5"/>
...
